--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
     "declaration": true,
     "declarationMap": true
   },
+  "include": [
+    "src"
+  ],
   "exclude": [
     "node_modules",
     "**/*.spec.ts"
