--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,29 +2,18 @@
   "compilerOptions": {
     "target": "ES6",
     "module": "commonjs",
+    "declaration": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "baseUrl": ".",
-    "paths": {
-      "ts-lib/module1": [
-        "dist/module1"
-      ],
-      "ts-lib/module2": [
-        "dist/module2"
-      ]
-    },
-    "strict": true,
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "declaration": true,
-    "declarationMap": true
+    "strict": true,
+    "baseUrl": "./",
+    "paths": {
+      "module1/*": ["src/module1/*"],
+      "module2/*": ["src/module2/*"]
+    }
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "tests"]
 }
